# aabb-knn-fraud

./: .bazelignore  .bazelrc  .clang-format  .clangd  .dockerignore  .gitattributes  .gitignore  Dockerfile  MODULE.bazel  docker-compose.yml  flake.nix  haproxy.cfg  info.json
.github/workflows/: publish.yml
bench/: BUILD.bazel  test.js
src/: BUILD.bazel  dataset.hpp  http.hpp  index.hpp  ivf.hpp  main.cpp  preprocess.cpp  vec.hpp  vectorize.hpp
tests/: BUILD.bazel
tests/internal/: BUILD.bazel  accuracy_test.cpp
