module(name = "rinhabackend2026", version = "0.0.1")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "simdjson",
    build_file = "@//:third_party/simdjson.BUILD",
    sha256 = "d0af071f2f4187d8b26b556e83ef832b634bd5feb4e2f537b9dabbd334d4e334",
    strip_prefix = "simdjson-3.12.3",
    url = "https://github.com/simdjson/simdjson/archive/refs/tags/v3.12.3.tar.gz",
)

http_archive(
    name = "zlib",
    build_file = "@//:third_party/zlib.BUILD",
    sha256 = "9a93b2b7dfdac77ceba5a558a580e74667dd6fede4585b91eefb60f03b72df23",
    strip_prefix = "zlib-1.3.1",
    url = "https://github.com/madler/zlib/releases/download/v1.3.1/zlib-1.3.1.tar.gz",
)
