cc_library(
    name = "http",
    hdrs = ["http.hpp"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vec",
    hdrs = ["vec.hpp"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataset",
    hdrs = ["dataset.hpp"],
    includes = ["."],
    deps = [
        ":vec",
        "@zlib",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "index",
    hdrs = ["index.hpp"],
    includes = ["."],
    deps = [
        ":vec",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vectorize",
    hdrs = ["vectorize.hpp"],
    includes = ["."],
    deps = [
        ":vec",
        "@simdjson",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "preprocess",
    srcs = ["preprocess.cpp"],
    deps = [
        ":dataset",
        ":index",
        ":vec",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "build_index",
    srcs = ["//tests:references"],
    outs = ["index.bin"],
    tools = [":preprocess"],
    cmd = "$(location :preprocess) $(location //tests:references) $@",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "rinha",
    srcs = ["main.cpp"],
    deps = [
        ":http",
        ":index",
        ":vectorize",
    ],
    visibility = ["//visibility:public"],
)
